--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -74,6 +74,13 @@ section h3 {
   margin-bottom: 8px;
 }
 
+.participants-list {
+  font-size: 0.9em;
+  color: #666;
+  padding-left: 10px;
+  border-left: 3px solid #0066cc;
+}
+
 .form-group {
   margin-bottom: 15px;
 }
